# kore

./: Cargo.toml  LICENSE  README.md  update-18-06-2026.md
examples/: try_it.rs
src/: converter.rs  infer_types.rs  lib.rs  serialize.rs  types.rs
tests/: converter_tests.rs
