[package]
name = "kore"
version = "1.0.0"
edition = "2021"
authors = ["kore-lang"]
description = "Convert JSON values into .kore format — a compact, human-readable data language."
license = "MIT"
repository = "https://github.com/kore-lang/kore-rs"
homepage = "https://github.com/kore-lang/kore-rs"
readme = "README.md"
keywords = ["kore", "json", "converter", "serializer", "data-format"]
categories = ["encoding", "data-structures", "text-processing"]
exclude = ["tests/fixtures/*"]

[dependencies]
serde_json = { version = "1.0", features = ["preserve_order"] }
indexmap = ">=2.2, <2.6"

[dev-dependencies]
serde_json = { version = "1.0", features = ["preserve_order"] }

[lib]
name = "kore"
path = "src/lib.rs"