[package]
name = "kore"
version = "1.0.1"
edition = "2021"
authors = ["kore-lang"]
description = "Convert JSON values into .kore format — a compact, human-readable data language. also for asura lang"
license = "MIT"
repository = "https://github.com/l-i-v-i-n/kore"
homepage = "https://github.com/l-i-v-i-n/kore"
readme = "README.md"
keywords = ["kore", "json", "converter", "serializer", "data-format"]
categories = ["encoding", "data-structures", "text-processing"]
exclude = ["tests/fixtures/*"]

[dependencies]
serde_json = { version = "1.0", features = ["preserve_order"] }
indexmap = ">=2.2, <2.6"

[dev-dependencies]
serde_json = { version = "1.0", features = ["preserve_order"] }

[lib]
name = "kore"
path = "src/lib.rs"